--- a/build.gradle
+++ b/build.gradle
@@ -26,4 +26,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.mockito:mockito-all:1.10.19')
+	testCompile('junit:junit:4.12')
+
+
 }
