--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,6 @@ include 'kodilla-good-patterns'
 include 'kodilla-rps'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
+include 'kodilla-patterns'
+include 'kodilla-spring-web'
+
