--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,5 @@ include 'kodilla-spring'
 include 'kodilla-patterns'
 include 'kodilla-spring-web'
 include 'kodilla-patterns'
+include 'kodilla-jdbc'
 
